added some bold to it

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 why did this file end up here?
 
 I added more code to this file.
+
+I thought that this filed needed some <b>BOLD</b>…so I added it.
