added a innocent question about HTML

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ why did this file end up here?
 I added more code to this file.
 
 I thought that this filed needed some <b>BOLD</b>…so I added it.
+
+What would happen if I made this an HTML file???
